Fixed bug #49027 (mysqli_options() doesn't work when using mysqlnd)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@287807 c90b9560-bf6c-de11-be94-00142212c4b1